<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="20dp">
    
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/todo"/>
    
    <TextView
        android:id="@+id/name_ID"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_currency"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/email_ID"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="14sp"
        android:textColor="#FFFFFF"/>

</LinearLayout>