<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/la_currency"
            android:textColor="#FF0000"
            android:textSize="45dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/fromCurr"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:layout_margin="8dp"
            android:prompt="@string/from_currency"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="188dp"
            android:text="@string/to"
            android:textColor="#979797"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_text" />

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/toCurr"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:layout_margin="8dp"
            android:prompt="@string/to_currency"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/logo_text" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="216dp"
            android:layout_height="56dp"
            android:layout_margin="30dp"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="214dp"
            android:text="@string/convert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navigation_pane"/>

</androidx.drawerlayout.widget.DrawerLayout>